<resources>
    <string name="app_name">CalculateTip(XML)</string>

    <string name="calculate_tip">Calculate Tip</string>

    <string name="bill_amount">Bill Amount</string>

    <string name="tip_percentage">Tip Percentage</string>

    <string name="round_up_tip">Round up tip?</string>

    <string name="tip_amount">Tip Amount: %s</string>

    <string name="default_tip_percentage">15%</string>

</resources>